# kingside

./: .gitattributes  .gitignore  README.md  build_pck.sh  export_presets.cfg  firestore.rules  logger.gd  logger.gd.uid  logger.tscn  online_service.cfg  project.godot  simple.gd  simple.gd.uid  simple.tscn  test_chesslogic.gd  test_chesslogic.gd.uid  test_engines.gd  test_engines.gd.uid  test_load.gd  test_load.gd.uid  test_load.tscn  test_online_logic.gd  test_online_logic.gd.uid  test_puzzles.gd  test_puzzles.gd.uid  test_puzzles.tscn  test_screens.gd  test_screens.gd.uid  test_screens.tscn
.github/workflows/: build-release.yml  ci.yml
Chess/: Chess-Info.plist  Launch Screen.storyboard  dummy.cpp  export_options.plist
Chess.xcodeproj/: project.pbxproj
Chess.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Chess.xcodeproj/xcshareddata/xcschemes/: Chess.xcscheme
MoltenVK.xcframework/: Info.plist
assets/brand/: android_adaptive_background_432.png.import  android_adaptive_foreground_432.png.import  android_adaptive_monochrome_432.png.import  android_icon_192.png.import  app_icon_1024.png.import  splash.png.import
assets/engines/: catalog.json  engines.json
assets/puzzles/: bundled.json
docs/: ARCHITECTURE.md  DISTRIBUTION.md  MAIA_ENGINE_SCOPE.md  ONLINE_SETUP.md  PRIVACY_POLICY.md  RATING_AUDIT.md  RELEASE_CHECKLIST.md  V1_LAUNCH_AUDIT.md  V1_STATUS.md  index.html  privacy.html  style.css  support.html  terms.html
docs/engines/: README.md  catalog.json
gdextension/: CMakeLists.txt  build_stockfish_extension.sh  chess_engine.gdextension  chess_engine.gdextension.uid  test_native_backend.gd  test_native_backend.gd.uid
gdextension/patches/: stockfish-18-single-nnue.patch
gdextension/src/: chess_engine.cpp  game_center.hpp  game_center_apple.mm  game_center_stub.cpp  speech_input.hpp  speech_input_ios.mm  speech_input_macos.mm  speech_input_stub.cpp  stockfish_smoke.cpp
marketing/: description.md  names.md
marketing/screenshots/: 01_main_menu__no_ads._no_account..png.import  02_puzzles_hub__2000+_puzzles_&.png.import  04_puzzle_solver__a_star-gated.png.import  07_difficulty__bots_for_every.png.import  08_game__real_stockfish.png.import  08c_local_game_capture__play_hands-free_—.png.import  09_profile__review_games_&.png.import
scenes/: Main.tscn
scripts/: Main.gd  Main.gd.uid
scripts/autoload/: AIEngine.gd  AIEngine.gd.uid  AIEngineBackend.gd  AIEngineBackend.gd.uid  AINativeBackend.gd  AINativeBackend.gd.uid  AIScriptBackend.gd  AIScriptBackend.gd.uid  ChessLogic.gd  ChessLogic.gd.uid  EngineRegistry.gd  EngineRegistry.gd.uid  GameCenterManager.gd  GameCenterManager.gd.uid  GameManager.gd  GameManager.gd.uid  Haptics.gd  Haptics.gd.uid  OnlineManager.gd  OnlineManager.gd.uid  PlayerData.gd  PlayerData.gd.uid  PuzzleManager.gd  PuzzleManager.gd.uid  SoundManager.gd  SoundManager.gd.uid  SpeechManager.gd  SpeechManager.gd.uid
scripts/tools/: generate_brand_assets.gd  generate_brand_assets.gd.uid  test_voice_move_parser.gd  test_voice_move_parser.gd.uid
scripts/ui/: AboutScreen.gd  AboutScreen.gd.uid  BoardVisual.gd  BoardVisual.gd.uid  DifficultyScreen.gd  DifficultyScreen.gd.uid  EnginesScreen.gd  EnginesScreen.gd.uid  FlameIcon.gd  FlameIcon.gd.uid  GameScreen.gd  GameScreen.gd.uid  MainMenuScreen.gd  MainMenuScreen.gd.uid  OnlineScreen.gd  OnlineScreen.gd.uid  PlayersScreen.gd  PlayersScreen.gd.uid  ProfileScreen.gd  ProfileScreen.gd.uid  PuzzlesScreen.gd  PuzzlesScreen.gd.uid  ScrollFriendlyButton.gd  ScrollFriendlyButton.gd.uid  SettingsScreen.gd  SettingsScreen.gd.uid  UIStockGraph.gd  UIStockGraph.gd.uid  UITheme.gd  UITheme.gd.uid  VoiceMoveParser.gd  VoiceMoveParser.gd.uid  WorldMapScreen.gd  WorldMapScreen.gd.uid
scripts/ui/game/: GameFormat.gd  GameFormat.gd.uid  GameHud.gd  GameHud.gd.uid  GameModals.gd  GameModals.gd.uid  GameOnline.gd  GameOnline.gd.uid  GameReview.gd  GameReview.gd.uid  GameVoice.gd  GameVoice.gd.uid  GameWidgets.gd  GameWidgets.gd.uid
sounds/: Capture.ogg.import  Check.ogg.import  Checkmate.ogg.import  Defeat.ogg.import  Move.ogg.import  Victory.ogg.import
tools/: bake_puzzles.py  bake_puzzles.sh  calibrate_bots.gd  calibrate_bots.gd.uid  calibrate_bots.tscn  export_icon.gd  export_icon.gd.uid  gen_imessage_icons.py  generate_icon.py  icon_drawer.gd  icon_drawer.gd.uid  ios_archive.sh  ios_deploy.sh  make_appstore_screens.py  make_icon.py  resize_ios_icons.py  resize_ios_splash.py  shrink_splash.py  sync_gdextension_manifest.py
tools/img2fen/: README.md  img2fen.py
